methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:11: error: not found: value testGauche
 testGauche = false
 ^SlugHunting:13: error: reassignment to val
 biscuit = estSurBiscuit()
         ^SlugHunting:17: error: reassignment to val
 bonChemin = isFacingTrail()
           ^SlugHunting:21: error: not found: value levebrosse
   levebrosse()
   ^SlugHunting:29: error: return outside method definition
 return caseVerte
 ^SlugHunting:35: error: reassignment to val
 caseVerte = false
           ^SlugHunting:41: error: reassignment to val
     caseVerte = true
               ^